:art: fixed profile image out of bound

--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,7 @@ a:visited {
 
 img {
   border-radius: 50%;
+  max-width: 100%;
 }
 
 @media print {
